<resources>
    <string name="app_name">Inventory App Stage 2</string>

    <string name="empty_view">Benvenuto, Aggiungi un nuovo prodotto e divertiti</string>
    <string name="delete_all">Cancella tutto</string>
    <string name="delete_messages">Sei sicuro?</string>
    <string name="add_item">Aggiungi</string>
    <string name="editore">Edita</string>
    <string name="edit_product">Edita Prodotto</string>
    <string name="sconosciuto_market">Sconosciuto</string>
    <string name="ebay_market">Ebay</string>
    <string name="ibs_market">IBS</string>
    <string name="maremagnum_market">MareMagnum</string>
    <string name="unsaved_changes">Vuoi annullare le modifiche?</string>
    <string name="undo">Annulla</string>
    <string name="continue_modify">Continua</string>
    <string name="product_details">Dettagli</string>
    <string name="delete_dialog">Vuoi cancellare?</string>
    <string name="change_quantity">La quantità è cambiata</string>
    <string name="end_message">Ottimo, compra qualcosa di nuovo</string>
    <string name="nome_prodotto">Prodotto</string>
    <string name="prezzo">Prezzo</string>
    <string name="moneta">Euro</string>
    <string name="ammontare">Quantità</string>
    <string name="negozio">Negozio</string>
    <string name="market_phone">Telefono</string>
    <string name="save">Salva</string>
    <string name="empty_list">Lista vuota</string>
    <string name="failure_insert">Errore nel salvataggio</string>
    <string name="success_insert">Salvataggio con successo</string>
    <string name="failure_update">Errore aggiornamento</string>
    <string name="success_update">Aggiornamento riuscito</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="deleted_all">Cancellate tutte</string>
    <string name="erase">Elimina</string>
    <string name="cancel">Cancella</string>
    <string name="product_view">Vedi</string>
    <string name="success_delete">Prodotto cancellato</string>
    <string name="failure_delete">Errore cancellazione</string>
    <string name="required_name">Nome obbligatorio</string>
    <string name="filed_requires">Completa tutti i campi</string>
    <string name="required_price">Prezzo obbligatorio</string>
    <string name="required_quantity">Quantità obbligatoria</string>
    <string name="required_market">Devi selezionare un negozio</string>
    <string name="required_phone">Telefono obbligatorio</string>

</resources>
